[gd_scene load_steps=14 format=3 uid="uid://kkwo8kh220fs"]

[ext_resource type="Texture2D" uid="uid://bce23i74dbj4g" path="res://assets/visual/panel.png" id="1_6non0"]
[ext_resource type="Script" path="res://scripts/game/tile_puzzle_side.gd" id="1_jqnnd"]
[ext_resource type="Script" path="res://scripts/game/tile_puzzle.gd" id="1_pcv0w"]
[ext_resource type="Script" path="res://scripts/managers/manager4.gd" id="1_xfwg6"]
[ext_resource type="Texture2D" uid="uid://dhe50yadna7mo" path="res://assets/visual/tiles.png" id="2_g6md6"]
[ext_resource type="Texture2D" uid="uid://dj4k6rju7jvsx" path="res://assets/cutscenes/black bg.png" id="3_k64os"]
[ext_resource type="FontFile" uid="uid://0ggbptpehuck" path="res://assets/fonts/PixelOperator8.ttf" id="5_g1oka"]
[ext_resource type="AudioStream" uid="uid://cgs2l7kecyol8" path="res://assets/sounds/tip.mp3" id="8_avxhk"]
[ext_resource type="AudioStream" uid="uid://cjnw1ticrybr8" path="res://assets/sounds/win.mp3" id="9_um67r"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_h6hbr"]
size = Vector2(383.333, 381.333)

[sub_resource type="Animation" id="Animation_sltaw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_tfbq1"]
resource_name = "glow"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect2:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.2, 0.9, 1.63333, 2.26667, 3.2, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 1, 1), Color(1, 1, 1, 1), Color(0, 1, 1, 1), Color(0.976471, 1, 1, 1), Color(0, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mdwrg"]
_data = {
"RESET": SubResource("Animation_sltaw"),
"glow": SubResource("Animation_tfbq1")
}

[node name="manager" type="Node"]
script = ExtResource("1_xfwg6")

[node name="Game" type="Node" parent="."]
script = ExtResource("1_jqnnd")

[node name="Sprite2D" type="Sprite2D" parent="Game"]
texture_filter = 1
position = Vector2(576, 321)
scale = Vector2(2, 2)
texture = ExtResource("1_6non0")

[node name="main" type="Area2D" parent="Game"]
position = Vector2(576, 320)
script = ExtResource("1_pcv0w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Game/main"]
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_h6hbr")

[node name="Tile1" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(-192, -192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(0, 0, 128, 128)

[node name="Tile2" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(0, -192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(128, 0, 128, 128)

[node name="Tile3" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(192, -192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(256, 0, 128, 128)

[node name="Tile4" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(-192, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(0, 128, 128, 128)

[node name="Tile5" type="Sprite2D" parent="Game/main"]
texture_filter = 1
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(128, 128, 128, 128)

[node name="Tile6" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(192, 0)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(256, 128, 128, 128)

[node name="Tile7" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(-192, 192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(0, 256, 128, 128)

[node name="Tile8" type="Sprite2D" parent="Game/main"]
texture_filter = 1
position = Vector2(0, 192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_g6md6")
region_enabled = true
region_rect = Rect2(128, 256, 128, 128)

[node name="Tile9" type="Sprite2D" parent="Game/main"]
position = Vector2(192, 192)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_k64os")
region_enabled = true
region_rect = Rect2(256, 256, 128, 128)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Game"]
libraries = {
"": SubResource("AnimationLibrary_mdwrg")
}

[node name="Sprite2D2" type="Sprite2D" parent="Game"]
position = Vector2(143, 165)
scale = Vector2(0.546875, 0.6875)
texture = ExtResource("2_g6md6")

[node name="ColorRect2" type="ColorRect" parent="Game"]
offset_left = 48.0
offset_top = 344.0
offset_right = 232.0
offset_bottom = 608.0

[node name="ColorRect" type="ColorRect" parent="Game"]
offset_left = 56.0
offset_top = 352.0
offset_right = 224.0
offset_bottom = 600.0
color = Color(0, 0, 0, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="Game"]
texture_filter = 1
offset_left = 64.0
offset_top = 360.0
offset_right = 216.0
offset_bottom = 592.0
theme_override_colors/default_color = Color(0, 1, 0, 1)
theme_override_constants/line_separation = 2
theme_override_fonts/normal_font = ExtResource("5_g1oka")
theme_override_font_sizes/normal_font_size = 13
text = "Help Axton repair the control panel by rearranging the navigation map to its correct order. Use your mouse to click on a tile to move it to a empty slot next to it "

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Game"]
stream = ExtResource("8_avxhk")
volume_db = 2.667

[node name="AudioStreamPlayer2D2" type="AudioStreamPlayer2D" parent="Game"]
stream = ExtResource("9_um67r")

[connection signal="win" from="Game/main" to="Game" method="_on_main_win"]
